fix: fixed navbar logo on mobile screens by using a media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,5 @@ h2 {
     .navbar-brand {
         font-size: 2rem;
         letter-spacing: 10px;
-        color: green;
     }
 }
